--- a/src/app/guest-lecture/guest-lecture.component.html
+++ b/src/app/guest-lecture/guest-lecture.component.html
@@ -1,1 +1,35 @@
-<p>guest-lecture works!</p>
+
+<div class="jumbotron text-center" style="height: 0px;">
+    <h1>Join Lecture</h1>
+</div>
+
+<div class="row">
+    <div class="col-3 text-right">
+        UserName
+    </div>
+    <div class="col-6">
+        <input type="text" class="form-control" id="usr">
+    </div>
+</div>
+<div class="row">
+    <div class="col-3">
+    </div>
+    <div class="col-6 text-center">
+         <button (click)="openModal('custom-modal-1')" 
+         class="btn btn-primary" style="margin: 12px;">start Conference</button>
+    </div>
+</div>
+
+
+
+<modal id="custom-modal-1">
+    <div class="modal">
+        <div class="modal-body" style="width: 683px;height: 547px; margin:30px 250px">
+            <app-video-calling *ngIf=showWebCam></app-video-calling>
+            <button type="button" style ="margin:0px 280px"
+            (click)="closeModal('custom-modal-1');"
+            class="btn btn-danger">End Call</button>
+        </div>
+    </div>
+    <div class="modal-background"></div>
+</modal>
