--- a/src/app/video-calling/video-calling.component.html
+++ b/src/app/video-calling/video-calling.component.html
@@ -1,12 +1,15 @@
-<div class="row">
+<!-- <div class="row">
     <webcam allowCameraSwitch="true"></webcam>
 </div>
 <div class="row">
-    <div class="col-6">
-        <button>ABC</button>
+    <div class="col-3">
+        
+        <button type="button" class="btn btn-primary float-right" >Primary</button>
     </div>
-    <div class="col-6">
-        <button>ABC</button>
+    <div class="col-3">
+        <button type="button" class="btn btn-danger">Danger</button>
     </div>
    
-</div>
+</div> -->
+
+<webcam allowCameraSwitch="true"></webcam>
