--- a/src/app/guest-lecture/guest-lecture.component.html
+++ b/src/app/guest-lecture/guest-lecture.component.html
@@ -11,6 +11,14 @@
         <input type="text" class="form-control" id="usr">
     </div>
 </div>
+<div class="row" style="margin-top: 10px;">
+    <div class="col-3 text-right">
+        Meeting Id
+    </div>
+    <div class="col-6">
+        <input type="text" class="form-control" id="meetingId">
+    </div>
+</div>
 <div class="row">
     <div class="col-3">
     </div>
