--- a/src/app/guest-lecture/guest-lecture.component.html
+++ b/src/app/guest-lecture/guest-lecture.component.html
@@ -1,21 +1,20 @@
-
-<div class="jumbotron text-center" style="height: 0px;">
+<div class="jumbotron text-center">
     <h1>Join Lecture</h1>
 </div>
 
-<div class="row">
-    <div class="col-3 text-right">
-        UserName
+<div class="row meeting">
+    <div class="col-md-4 text-right">
+        UserName: 
     </div>
-    <div class="col-6">
+    <div class="col-md-4">
         <input type="text" class="form-control" id="usr">
     </div>
 </div>
-<div class="row" style="margin-top: 10px;">
-    <div class="col-3 text-right">
-        Meeting Id
+<div class="row meeting">
+    <div class="col-md-4 text-right">
+        Meeting Id: 
     </div>
-    <div class="col-6">
+    <div class="col-md-4">
         <input type="text" class="form-control" id="meetingId">
     </div>
 </div>
