--- a/src/app/video-streaming/video-streaming.component.html
+++ b/src/app/video-streaming/video-streaming.component.html
@@ -1,1 +1,7 @@
-<p>video-streaming works!</p>
+<h1>My id - {{mypeerid}} </h1>
+
+<input type="text" [(ngModel)]="anotherId">
+<button (click)="connect()">Connect</button>
+<button (click)="videoConnect()">Video Connect</button>
+<br />
+<video #myvideo></video>
